# conversation_analysis

./: .dockerignore  .env.example  .gitignore  ConvoGuard_Full_Implementation_Plan.md  Makefile  README.md  demo-bot.ts  deploy.sh  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml  fix-pkg.js  input.txt  live-bot.mts  netlify.toml  out.txt  out2.txt  package.json  patch.py  pnpm-lock.yaml  render.yaml  test_chat.txt  test_custom.py  test_long.py  test_long2.py  test_short.py  tsconfig.base.json  turbo.json
apps/analysis-engine/: Dockerfile  README.md  analyze_data.py  chat_dump.json  chat_output.json  debug_crash.py  diagnostic_parse.py  gemini_dump.html  gpt_dump.html  package.json  pyproject.toml  score_link.py  scratch_fetch.py  test_chatgpt.py  test_fetch.py  test_gem.py  test_gemini.py  test_gpt.py  test_gpt2.py  test_gpt3.py  test_scorer.py
apps/analysis-engine/ChatPeek/: .gitignore  ChatPeek.py  ChatPeek_test.py  README.md  mypy.ini
apps/analysis-engine/ChatPeek/fixtures/: 690781ed-75f0-8006-9d6e-d9229bd932f2.html
apps/analysis-engine/src/: __init__.py  chatpeek_parser.py  fusion.py  license_validator.py  main.py  model_loader.py  rule_filter.py  scoring.py  summary_generator.py  tamper_detector.py  telemetry.py  tier2_scorer.py  types.py  url_fetcher.py  worker.py
apps/analysis-engine/src/analyzers/: __init__.py  competitor_bashing.py  concern_dismissal.py  hedge_detector.py  persistence_tracker.py  pivot_detector.py  urgency_signals.py
apps/analysis-engine/src/models/: __init__.py  classifier.py
apps/analysis-engine/src/training/: __init__.py  generate_hf_training_data.py  generate_hybrid_data.py  generate_training_data.py  train_classifier.py
(+146 files in other folders)
